# NorthBrief

./: .gitignore  README.md  docker-compose.yml  render.yaml
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260403_01_initial_schema.py  20260404_02_sources_scaling.py
backend/app/: main.py  make_admin.py  seed.py  worker.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: admin.py  auth.py  bookmarks.py  feed.py  health.py  meta.py  preferences.py  sources.py
backend/app/core/: config.py  security.py
backend/app/db/: prepare.py  session.py
backend/app/models/: __init__.py  models.py
backend/app/schemas/: __init__.py  schemas.py
backend/app/services/: bootstrap.py  constants.py  ranking.py
backend/app/services/ingestion/: categorizer.py  deduper.py  fetcher.py  pipeline.py  region_tagger.py  sources.py
backend/app/services/summarization/: base.py  mock_provider.py  openai_provider.py  service.py
backend/app/tests/: test_ingestion_helpers.py  test_source_config.py  test_summarization.py
backend/config/: prompt_templates.md  sources.json
backend/scripts/: start.sh
frontend/: .env.example  Dockerfile  package-lock.json  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: app-shell.tsx  auth-form.tsx  feed-tabs.tsx  hero-3d.tsx  news-card-v2.tsx  news-card.tsx  providers.tsx  theme-provider.tsx
frontend/lib/: api.ts  auth.ts  next-auth.d.ts  preferences-data.ts  types.ts
(+12 files in other folders)
