[project]
name = "northbrief-backend"
version = "0.1.0"
description = "NorthBrief FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "alembic==1.14.1",
  "fastapi==0.115.7",
  "email-validator==2.2.0",
  "feedparser==6.0.11",
  "httpx==0.28.1",
  "passlib==1.7.4",
  "psycopg[binary]==3.2.3",
  "pydantic-settings==2.7.1",
  "python-dateutil==2.9.0.post0",
  "python-jose[cryptography]==3.3.0",
  "python-multipart==0.0.20",
  "sqlalchemy==2.0.37",
  "uvicorn[standard]==0.34.0",
]

[project.optional-dependencies]
dev = [
  "pytest==8.3.4",
  "pytest-asyncio==0.25.2",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["app/tests"]
